# Universal-Bitcoin-Identity-Layer

./: .env.example  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  DEPLOY_DATABASE.md  DEPLOY_VPS_INSTRUCTIONS.md  Makefile  PRODUCTION_STATUS.md  README.md  SECURITY.md  TROUBLESHOOTING.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test.sh  test2.sh
.github/: dependabot.yml
.github/workflows/: docker.yml  lint.yml  security.yml  test.yml
alembic/: env.py
app/: API_RESPONSE_EXAMPLES.md  OAUTH_LNURL_SPECIFICATION.md  README.md  SECURITY_REQUIREMENTS.md  TOKEN_POLICIES.md  app.py  audit_logger.py  config.py  database.py  db_storage.py  models.py  storage.py
deployment/: QUICK_REFERENCE.md  README.md  deploy-production.sh  nginx-hodlxxi.conf  security-hardening.sh  setup-automated-backups.sh
scripts/: db_init.py
tests/: README.md  conftest.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_audit_logger.py  test_config.py  test_storage.py
